# python_mini_projeler

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
01 - Çarpım Tablosu/: README.md  main.py
02 - Ligtv'den Haber Çekme/: cnn_sondakika_haber.py  haberler.com.py
03 - En Büyük ve En Küçük Sayıyı Bulma/: main.py
05 - Hanoi Kuleleri Oyunu/: main.py
06 - Faktoriyel Alma/: main.py
07 - Geometrik Şekillerin Alanlarını Hesaplama/: main.py
08 - Zamanlayıcı/: main.py
09 - Dosya Okuma/: main.py
10 - Zar Oyunu/: better.py  main.py
11 - Eskişehir Hava Durumu/: main.py
12 - 'os' Modülü ile Dosya İşlemleri/: main.py
13 - Öğrenci Kayıt Otomasyonu ( MongoDB )/: main.py
14 - Asal Sayı Bulma/: main.py
16 - Beautifulsoup ile Sitelerden Haber Başlıklarını Çekme/: main.py
17 - Yazıyı Tersten Yazdırma/: main.py
18 - TV Kanalları Yayın Akışı/: main.py
19 - Sqlite3 İşlemleri/: ekleme.py
2 - Hesap Makinesi/: hesap_makinesi.py
20 - Qt Designer ile Tv Yayın Akışı/: README.md  form.ui  main.py  scrapper.py
21 - Çarpım Tablosu GUI/: README.md  design.ui  form.ui  main.py
22 - Qt4 Designer ListWidgets/: README.md  scrapper.py
22 - Qt5 Designer ListWidgets/: README.md  form.ui  main.py  scrapper.py
23 - Qt4 Tüketici Kredisi Hesaplama Aracı/: README.md  form.py  main.py  scrapper.py
23 - Qt5 Tüketici Kredisi Hesaplama Aracı/: form.ui  main.py  scrapper.py
24 - Qt4 Ordu Ticaret Borası Fındık Fiyatı Sorgulama/: README.md  main.py
24 - Qt5 Ordu Ticaret Borası Fındık Fiyatı Sorgulama/: README.md  (+3 more)
(+84 files in other folders)
